# rd-service-catalogue

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  _quarto.yaml  index.qmd  pyproject.toml  template.txt
.github/workflows/: test_pkg.yml
ai_nexus/: build_yaml.py  confluence_api.py  github_api.py  request_utils.py  requests_utils.py
ai_nexus_backend/: build_yaml.py  confluence_api.py  create_asset_register.ipynb  data_prep_utils.py  data_transform.py  github_api.py  requests_utils.py
data/: assets.yaml
docs/: index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
experiments/: crew-ai-agentic-search.py
notebooks/: ingest_readme_yaml.ipynb  ingest_yaml_from_confluence.ipynb  ingest_yaml_from_github.ipynb
pipeline/: 01_gulp_data.py  02_build_listings.py  prep_data_for_haystack.py
tests/: test_confluence_api.py  test_data_prep_utils.py  test_github_api.py  test_request_utils.py
tests/data/: metadata_example.json
