[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.sdist]
only-include = ["ai_nexus"]
exclude = [
  "/.github",
  "htmlcov",
  ".coverage",
  "coverage.xml",
]
[tool.hatch.build.targets.wheel]
packages = ["./ai_nexus"]
[project]
name = "ai_nexus"
version = "0.0.1"
requires-python = "==3.12.*"
description = "Modular component for AI-enabled application search backend."
readme = "README.md"
authors = [
    { name="Rich Leyshon", email="richard.leyshon@digital.justice.gov.uk" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
]
dependencies = [
    "fastparquet",
    "pandas",
    "pyarrow",
    "pyprojroot",
    "python-dotenv",
    "requests",
    ]

[project.optional-dependencies]
# Add your optional dependencies here
dev = [
    "pytest",
    "hatchling",
]
frontend = [
]
[project.urls]
Repository = "https://github.com/ministryofjustice/..."
"Bug tracker" = "https://github.com/ministryofjustice/.../issues"
# `coverage` configurations
[tool.coverage.run]
source = [
    "./ai_nexus"
]
omit = ["**/__init__.py"]
[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:"
]
# `pytest` configurations
[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE"
testpaths = [
    "./tests"
]
